@@ -130,14 +130,14 @@ public class XlsxOutput extends StandardOutput {
 		bodyStyle.setFont(bodyFont);
 
 		String javaDateFormat = report.getDateFormat();
-		String javaDateTimeFormat = null;
+		String javaDateTimeFormat = report.getDateTimeFormat();
 		String javaTimeFormat = report.getTimeFormat();
 		String numberFormat = report.getNumberFormat();
 
 		dateStyle = wb.createCellStyle();
 		if (StringUtils.isBlank(javaDateFormat)) {
 			//https://poi.apache.org/apidocs/dev/org/apache/poi/ss/usermodel/BuiltinFormats.html
-			dateStyle.setDataFormat(HSSFDataFormat.getBuiltinFormat("m/d/yy h:mm"));
+			dateStyle.setDataFormat(HSSFDataFormat.getBuiltinFormat("m/d/yy"));
 		} else {
 			DataFormat poiFormat = wb.createDataFormat();
 			String excelDateFormat = DateFormatConverter.convert(locale, javaDateFormat);
