@@ -732,6 +732,15 @@ Settings configuration page
 						</div>
 					</div>
 					<div class="form-group">
+						<label class="control-label col-md-4" for="dateTimeFormat">
+							<spring:message code="page.label.dateTimeFormat"/>
+						</label>
+						<div class="col-md-8">
+							<form:input path="dateTimeFormat" maxlength="50" class="form-control"/>
+							<form:errors path="dateTimeFormat" cssClass="error"/>
+						</div>
+					</div>
+					<div class="form-group">
 						<label class="control-label col-md-4" for="timeFormat">
 							<spring:message code="settings.label.timeFormat"/>
 						</label>
